added description for the tasks

--- a/lesson8/tasks/task2.html
+++ b/lesson8/tasks/task2.html
@@ -81,7 +81,13 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №2. </h1>
+		<h1>Задача №2. Дано послідовність номерів автомобілів.</h1>
+		<p>Підрахувати кількість номерів, які:</p>
+		<ul>
+			<li>починаються на букву «А»;</li>
+			<li>перша і остання літери співпадають;</li>
+			<li>складаються з більше ніж 5 символів;</li>
+		</ul>
 		<script>
 
 		</script>
