--- a/lesson8/tasks/task3.html
+++ b/lesson8/tasks/task3.html
@@ -81,7 +81,13 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №3. </h1>
+		<h1>Задача №3. Дано послідовність оцінок учня.</h1>
+		<p>Підрахувати кількість:</p>
+		<ol>
+			<li>двійок</li>
+			<li>кількість хороших оцінок (добре, відмінно);</li>
+			<li>кількість оцінок, які нижче середнього.</li>
+		</ol>
 		<script>
 
 		</script>
