--- a/lesson8/tasks/task4.html
+++ b/lesson8/tasks/task4.html
@@ -81,7 +81,8 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №4. </h1>
+		<h1>Задача №4. Дано послідовність цін товарів та назв (у окремих масивах). Вивести на екран ті, які може собі
+			дозволити користувач (кількість грошей задається).</h1>
 		<script>
 
 		</script>
