--- a/lesson8/tasks/task5.html
+++ b/lesson8/tasks/task5.html
@@ -81,7 +81,9 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №5. </h1>
+		<h1>Задача №5. Дано одновимірний масив, у якому зберігається певна виграшна сума (елементи заповнюються випадковим
+			чином значеннями від -500 до 500). Надаючи користувачу можливість вибирати номери елементів (поки він не
+			відмовиться). Знаходити сумарний виграш.</h1>
 		<script>
 
 		</script>
