--- a/lesson8/tasks/task1.html
+++ b/lesson8/tasks/task1.html
@@ -81,7 +81,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1. </h1>
+		<h1>Задача №1. Дано масив, який зберігає кількість відвідувачів магазину протягом тижня.</h1>
+		<p>Вивести на екран:</p>
+		<ul>
+			<li>номери днів, протягом яких кількість відвідувачів була меншою за 20;</li>
+			<li>номери днів, коли кількість відвідувачів була мінімальною;</li>
+			<li>номери днів, коли кількість відвідувачів була максимальною;</li>
+			<li>загальну кількість клієнтів у робочі дні та окремо загальну кількість клієнтів на вихідних.</li>
+		</ul>
 		<script>
 
 		</script>
