--- a/lesson8/tasks/task4.html
+++ b/lesson8/tasks/task4.html
@@ -84,6 +84,43 @@
 		<h1>Задача №4. Дано послідовність цін товарів та назв (у окремих масивах). Вивести на екран ті, які може собі
 			дозволити користувач (кількість грошей задається).</h1>
 		<script>
+			function inputProductNames(productsNumber) {
+				let arr = []
+				for (let i = 0; i < productsNumber; i++) {
+					const productNamae = prompt(`введіть назву продукту під номером ${i + 1}`)
+					arr.push(productNamae)
+				}
+				return arr
+			}
+			// функція для отримання цін продуктів
+			function inputProductPrices(productsNumber) {
+				let arr = []
+				for (let i = 0; i < productsNumber; i++) {
+					const productPrice = parseFloat(prompt(`введіть ціну продукту під номером ${i + 1}`))
+					arr.push(productPrice)
+				}
+				return arr
+			}
+			// функція для визначення переліку продуктів, які може дозволити собі користувач
+			function getProductsUserCanAfford(userMoney, productPrices, productNames) {
+				document.write('<p>Користувач може собі дозволити:</p>')
+				document.write('<ul>')
+				for (let i = 0; i < productPrices.length; i++) {
+					if (userMoney >= productPrices[i])
+						document.write(`<li>${productNames[i]} за ${productPrices[i]} грн.</li>`)
+				}
+				document.write('</ul>')
+			}
+			// введення кількості продуктів для наповнення масивів
+			const productsNumber = parseInt(prompt('введіть кількість продуків'))
+			// отримання масиву назв продуктів в константу
+			const productNames = inputProductNames(productsNumber)
+			// отрмання масиву цін продуктів
+			const productPrices = inputProductPrices(productsNumber)
+			// введення кількості грошей
+			const userMoney = parseFloat(prompt('введіть кількість грошей які у вас є'))
+			// отримання розв"язку
+			const userProduct = getProductsUserCanAfford(userMoney, productPrices, productNames)
 
 		</script>
 	</div>
