--- a/lesson8/tasks/task5.html
+++ b/lesson8/tasks/task5.html
@@ -85,7 +85,33 @@
 			чином значеннями від -500 до 500). Надаючи користувачу можливість вибирати номери елементів (поки він не
 			відмовиться). Знаходити сумарний виграш.</h1>
 		<script>
-
+			const lotteryFieldNUmber = parseInt(prompt('введіть кількість клітинок лотерейного білета'))
+			// функція заповнення лотерейного квитка
+			function getLotteryField(lotteryFieldNUmber) {
+				let arr = []
+				for (let i = 0; i < lotteryFieldNUmber; i++) {
+					let winningAmount = Math.floor(Math.random() * (500 - -500 + 1) + -500)
+					arr.push(winningAmount)
+				}
+				return arr
+			}
+			// функція гри
+			function playLottery(lotteryFiled) {
+				let sum = 0
+				let message = ''
+				do {
+					let userNumber = parseInt(prompt('введіть номер клітинки'))
+					sum += lotteryFiled[userNumber - 1]
+					message = confirm(`Виграш складає = ${lotteryFiled[userNumber - 1]}.\nЗагальна сума виграшу = ${sum}.\nПродовжуємо гру?`)
+					lotteryFiled[userNumber - 1] = 0
+				} while (message === true);
+				return sum
+			}
+			// отримання поля для гри
+			const lotteryFiled = getLotteryField(lotteryFieldNUmber)
+			// Виклик функції
+			const award = playLottery(lotteryFiled)
+			alert(`ваш сукупний виграш склав ${award}`)
 		</script>
 	</div>
 </body>
