--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson8/index.html">Домашні завдання (Урок №8).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson7/index.html">Домашні завдання (Урок №7).</a>
 				</li>
 				<li>
