--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -76,19 +76,24 @@
 		<h1>Домашні завдання (Урок 9).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1.</a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1. Користувач вводить кількість елементів. Створити масив,
+					у якому перша половина заповнена 1-цями, а друга заповнена 7-ками.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2. </a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2. Дано масив елементів.Знайти добуток додатних
+					елементів.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3. </a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3. Дано масив цін.Змінити цей масив так, що на ціни
+					товарів, які більші за 1000 грн.дати 30 % знижки.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4.</a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. Дано масив номерів авто.Сформувати новий масив тих, які
+					починаються на «А».</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5. </a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5. Дано масив імен. Сформувати масив з перших літер цих
+					імен. </a>
 			</li>
 			<li>
 				<a target="_blank" href="#">Інші задачі з уроку.</a>
