--- a/lesson9/tasks/task3.html
+++ b/lesson9/tasks/task3.html
@@ -81,9 +81,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №3. </p>
+		<h1>Задача №3. Дано масив цін.Змінити цей масив так, що на ціни товарів, які більші за 1000 грн.дати 30 % знижки.
+			</p>
 			<script>
-
+				const pricesList = [500, 350, 200, 900, 1050, 999, 3500, 2499, 1080]
+				pricesList.forEach((element, index, arr) => {
+					if (element > 1000) arr[index] *= 1 - 30 / 100
+				});
+				console.log(pricesList);
 			</script>
 	</div>
 </body>
