--- a/lesson9/tasks/task4.html
+++ b/lesson9/tasks/task4.html
@@ -81,16 +81,16 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №4. Дано масив номерів авто. Сформувати новий масив тих, які починаються на «А»</p>
-			<script>
-				const carLicensePlates = ['AI0101OA', 'KA1010AI', 'AA0010BA', 'CA1488BA', 'AP4102AC', 'AB1988IO']
-				const carPlatesStartsWithA = []
-				carLicensePlates.forEach(element => {
-					const arr = [...element]
-					if (arr[0] === 'A') carPlatesStartsWithA.push(element)
-				});
-				console.log(carPlatesStartsWithA);
-			</script>
+		<h1>Задача №4. Дано масив номерів авто. Сформувати новий масив тих, які починаються на «А»</h1>
+		<script>
+			const carLicensePlates = ['AI0101OA', 'KA1010AI', 'AA0010BA', 'CA1488BA', 'AP4102AC', 'AB1988IO']
+			const carPlatesStartsWithA = []
+			carLicensePlates.forEach(element => {
+				const arr = [...element]
+				if (arr[0] === 'A') carPlatesStartsWithA.push(element)
+			});
+			console.log(carPlatesStartsWithA);
+		</script>
 	</div>
 </body>
 </html>
