--- a/lesson9/tasks/task1.html
+++ b/lesson9/tasks/task1.html
@@ -82,12 +82,12 @@
 <body>
 	<div class="container">
 		<h1>Задача №1. Користувач вводить кількість елементів. Створити масив, у якому перша половина заповнена 1-цями, а
-			друга заповнена 7-ками.</p>
-			<script>
-				const userElem = parseInt(prompt('Введіть кількість елементів'))
-				const userArr = new Array(userElem).fill(1, 0, userElem / 2).fill(7, userElem / 2)
-				console.log(userArr);
-			</script>
+			друга заповнена 7-ками.</h1>
+		<script>
+			const userElem = parseInt(prompt('Введіть кількість елементів'))
+			const userArr = new Array(userElem).fill(1, 0, userElem / 2).fill(7, userElem / 2)
+			console.log(userArr);
+		</script>
 	</div>
 </body>
 </html>
