fiiled links by description

--- a/additionalTasks/lesson6/index.html
+++ b/additionalTasks/lesson6/index.html
@@ -76,19 +76,42 @@
 		<h1>Решта домашніх завдант (Урок №6).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1().</a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1.З клавіатури вводяться числа поки не буде введено 0.
+					Знайти суму чисел.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2().</a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2. З клавіатури вводитяться числа поки не буде введено 0.
+					Знайти добуток чисел.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3().</a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3.З клавіатури поступово вводяться символи поки не буде
+					введено символ «а». Вивести рядок символів у зворотному порядку.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4().</a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. З клавіатури вводиться початкове значення суми. Поки
+					сума є меншою за 100 додавати до неї числа, які вводяться з клавіатури.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5().</a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5. З клавіатури поступово вводяться числа. Знайти суму
+					перших N() парних чисел.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task6.html">Задача №6. З клавіатури вводяться два числа N i M (N < M). Вивести
+						на екран числа.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task7.html">Задача №7. На екрані виводиться меню.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task8.html">Задача №8. Комп’ютер загадує випадкове число від 1 до 10. Вгадати
+					число шляхом введеня можливих варіантів. В кінці вивести кількість спроб користувача.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task9.html">Задача №9. Використовуючи цикли вивести на екран 20 символів «о».
+				</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task10.html">Задача №10. Відобразити трикутник за допомогою символів «о». </a>
 			</li>
 		</ol>
 	</div>
