--- a/additionalTasks/lesson6/tasks/task09.html
+++ b/additionalTasks/lesson6/tasks/task09.html
@@ -81,9 +81,12 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1. </h1>
+		<h1>Задача №9. Використовуючи цикли вивести на екран 20 символів «о».</h1>
+		<script>
+			for (let o = 0; o < 20; o++) {
+				document.write('o')
+			}
+		</script>
 	</div>
-	<script>
-	</script>
 </body>
 </html>
