--- a/additionalTasks/lesson6/tasks/task10.html
+++ b/additionalTasks/lesson6/tasks/task10.html
@@ -81,9 +81,15 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1. </h1>
+		<h1>Задача №10. Відобразити трикутник за допомогою символів «о».</h1>
+		<script>
+			for (let i = 0; i < 7; i++) {
+				for (let j = 0; j <= i; j++) {
+					document.write('O')
+				}
+				document.write('<br>')
+			}
+		</script>
 	</div>
-	<script>
-	</script>
 </body>
 </html>
