--- a/additionalTasks/lesson6/index.html
+++ b/additionalTasks/lesson6/index.html
@@ -84,8 +84,9 @@
 					Знайти добуток чисел.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3.З клавіатури поступово вводяться символи поки не буде
-					введено символ «а». Вивести рядок символів у зворотному порядку.</a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3.Інвестор вклав S тис.грн на 20 років під 20 %
+					річних.Визначити за допомогою циклів суму, яку він одержить(без
+					оподаткування).</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task4.html">Задача №4. З клавіатури вводиться початкове значення суми. Поки
