--- a/additionalTasks/lesson6/index.html
+++ b/additionalTasks/lesson6/index.html
@@ -114,6 +114,78 @@
 			<li>
 				<a target="_blank" href="./tasks/task10.html">Задача №10. Відобразити трикутник за допомогою символів «о». </a>
 			</li>
+			<li>
+				<a target="_blank" href="./tasks/task11.html">Задача №11. Вивести на екран послідовність символів а о а о а о а
+					о а о … сього символів 82.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task12.html">Задача №12. Вивести на екран усі двоцифрові числа, у яких перша
+					цифра є більшою або рівною за другу. 10 - 99</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task13.html">Задача №13. Вивести на екран усі трицифрові числа, у яких перша
+					цифра є більшою або рівною за суму другої і третьої.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task14.html">Задача №14. З клавіатури вводиться число.Знаходити суму цифр до
+					тих пір.Поки сума не стане більшую за 20.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task15.html">Задача №15. З клавіатури вводяться поступово числа. Знайти два
+					найбільші числа. Ввід здійснюється до тих пір, поки різниця між
+					такими числами є більшою за 5.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task16.html">Задача №16. З клавіатури вводяться поступово числа. Знайти два
+					найменші числа. Ввід здійснюєтья до тих пір, поки різниця між такими
+					числами є більшою за 5.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task17.html">Задача №17. Знайти суму всіх непарних чисел з діапазону, який
+					вводить користувач з клавіатури.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task18.html">Задача №18. Написати програму, яка показуватиме на екрані
+					піднесене до квадрату число, що вводиться користувачем.Користувач вирішує
+					самостійно – виходити з програми або продовжувати ввід. (Підказка: потрібно запустити нескінчений цикл, в тілі
+					якого
+					передбачити його переривання у випадку настання певної умови).</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task19.html">Задача №19. Написати програму, що виводить на екран таблицю
+					множення на k(k вводиться з клавіатури).</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task20.html">Задача №20. Дано натуральні числа від 20 до 50. Надрукувати ті з
+					них, які діляться на 3, але не діляться на 5.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task21.html">Задача №21. Дано натуральні числа від 35 до 87. Надрукувати ті з
+					них, які при діленні на 7 дають остачу 1, 2 або 5.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task22.html">Задача №22. Дано натуральні числа від 1 до 50. Знайти суму тих,
+					які діляться на 5 чи 7.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task23.html">Задача №23. Надрукувати всі двоцифрові числа, які діляться на 4,
+					але не діляться на 6.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task24.html">Задача №24.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task25.html">Задача №25.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task26.html">Задача №26.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task27.html">Задача №27.</a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task21.html">Задача №21.</a>
+			</li>
 		</ol>
 	</div>
 </body>
