added solutions for additional tasks

--- a/additionalTasks/lesson6/tasks/task11.html
+++ b/additionalTasks/lesson6/tasks/task11.html
@@ -81,8 +81,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №11.</h1>
+		<h1>Задача №11. Вивести на екран послідовність символів а о а о а о а о а о … сього символів 82.</h1>
 		<script>
+			for (let i = 0; i < 41; i++) {
+				document.write(' a ')
+				for (let j = 0; j < 1; j++) {
+					document.write(' o ')
+				}
+			}
 		</script>
 	</div>
 </body>
