--- a/additionalTasks/lesson6/tasks/task12.html
+++ b/additionalTasks/lesson6/tasks/task12.html
@@ -81,8 +81,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №11.</h1>
+		<h1>Задача №12. Вивести на екран усі двоцифрові числа, у яких перша цифра є більшою або рівною за другу. 10 - 99.
+		</h1>
 		<script>
+			for (let n1 = 1; n1 <= 9; n1++) {
+				for (let n2 = 0; n2 <= n1; n2++) {
+					document.write(`${n1}${n2} <br>`)
+				}
+			}
 		</script>
 	</div>
 </body>
