--- a/additionalTasks/lesson6/tasks/task13.html
+++ b/additionalTasks/lesson6/tasks/task13.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>11th task (Lesson 6)</title>
+	<title>13th task (Lesson 6)</title>
 	<style>
 		*,
 		*::before,
@@ -81,8 +81,19 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №11.</h1>
+		<h1>Задача №13. Вивести на екран усі трицифрові числа, у яких перша цифра є більшою або рівною за суму другої і
+			третьої.</h1>
 		<script>
+			for (let n1 = 1; n1 <= 9; n1++) {
+				for (let n2 = 0; n2 <= n1; n2++) {
+					for (let n3 = 0; n3 <= n1; n3++) {
+						let sum = n2 + n3
+						if (sum <= n1) {
+							document.write(`${n1}${n2}${n3}<br>`)
+						}
+					}
+				}
+			}
 		</script>
 	</div>
 </body>
