--- a/additionalTasks/lesson6/tasks/task18.html
+++ b/additionalTasks/lesson6/tasks/task18.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>11th task (Lesson 6)</title>
+	<title>18th task (Lesson 6)</title>
 	<style>
 		*,
 		*::before,
@@ -81,8 +81,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №11.</h1>
+		<h1>Задача №18.</h1>
 		<script>
+			// Написати програму, яка показуватиме на екрані піднесене до квадрату число, що вводиться користувачем.Користувач вирішує самостійно – виходити з програми або продовжувати ввід. (Підказка: потрібно запустити нескінчений цикл, в тілі якого передбачити його переривання у випадку настання певної умови).
+			for (; ;) {
+				let userNumber = parseInt(prompt('Enter your number'))
+				if (isNaN(userNumber)) break
+				alert(result = Math.pow(userNumber, 2))
+			}
 		</script>
 	</div>
 </body>
