--- a/additionalTasks/lesson6/tasks/task19.html
+++ b/additionalTasks/lesson6/tasks/task19.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>11th task (Lesson 6)</title>
+	<title>19th task (Lesson 6)</title>
 	<style>
 		*,
 		*::before,
@@ -81,8 +81,13 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №11.</h1>
+		<h1>Задача №19.</h1>
 		<script>
+			// Написати програму, що виводить на екран таблицю множення на k(k вводиться з клавіатури).
+			let userNum = parseInt(prompt('Enter your number'))
+			for (let i = 1; i <= 9; i++) {
+				document.write(`${i} * ${userNum} = ${i * userNum} <br>`)
+			}
 		</script>
 	</div>
 </body>
