--- a/additionalTasks/lesson6/tasks/task20.html
+++ b/additionalTasks/lesson6/tasks/task20.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>11th task (Lesson 6)</title>
+	<title>20th task (Lesson 6)</title>
 	<style>
 		*,
 		*::before,
@@ -81,8 +81,13 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №11.</h1>
+		<h1>Задача №20. Дано натуральні числа від 20 до 50. Надрукувати ті з них, які діляться на 3, але не діляться на 5.
+		</h1>
 		<script>
+			for (let i = 20; i <= 50; i++) {
+				if (i % 3 === 0 && i % 5 !== 0)
+					document.write(`${i} <br>`)
+			}
 		</script>
 	</div>
 </body>
