--- a/additionalTasks/lesson6/tasks/task22.html
+++ b/additionalTasks/lesson6/tasks/task22.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>11th task (Lesson 6)</title>
+	<title>22th task (Lesson 6)</title>
 	<style>
 		*,
 		*::before,
@@ -81,8 +81,14 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №11.</h1>
+		<h1>Задача №22. Дано натуральні числа від 1 до 50. Знайти суму тих, які діляться на 5 чи 7.</h1>
 		<script>
+			let sum = 0
+			for (let i = 1; i <= 50; i++) {
+				if (i % 5 === 0 || i % 7 === 0)
+					sum += i
+			}
+			document.write(`Sum = ${sum}`)
 		</script>
 	</div>
 </body>
