added link for additional tasks

--- a/lesson06/index.html
+++ b/lesson06/index.html
@@ -102,6 +102,9 @@
 					Поки пароль не вірний дати можливість користувачу повторно ввести
 					його.</a>
 			</li>
+			<li>
+				<a target="_blank" href="../additionalTasks/lesson6/index.html">Додаткові завдання.</a>
+			</li>
 		</ol>
 	</div>
 </body>
