add path for the other tasks

--- a/lesson08/index.html
+++ b/lesson08/index.html
@@ -95,7 +95,7 @@
 					можливість вибирати номери елементів (поки він не відмовиться). Знаходити сумарний виграш.</a>
 			</li>
 			<li>
-				<a target="_blank" href="#">Інші задачі з уроку.</a>
+				<a target="_blank" href="../additionalTasks/lesson08/index.html">Інші задачі з уроку.</a>
 			</li>
 		</ol>
 	</div>
