--- a/additionalTasks/lesson08/index.html
+++ b/additionalTasks/lesson08/index.html
@@ -76,26 +76,16 @@
 		<h1>Домашні завдання (Урок 8).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1. Дано масив, який зберігає кількість відвідувачів
-					магазину протягом тижня.</a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1. </a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2. Дано послідовність номерів автомобілів.</a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2. </a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3. Дано послідовність оцінок учня.</a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3. </a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4. Дано послідовність цін товарів та назв (у окремих
-					масивах). Вивести на екран ті, які може собі дозволити користувач (кількість грошей задається).</a>
-			</li>
-			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5. Дано одновимірний масив, у якому зберігається певна
-					виграшна сума (елементи заповнюються випадковим чином значеннями від -500 до 500). Надаючи користувачу
-					можливість вибирати номери елементів (поки він не відмовиться). Знаходити сумарний виграш.</a>
-			</li>
-			<li>
-				<a target="_blank" href="#">Інші задачі з уроку.</a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. </a>
 			</li>
 		</ol>
 	</div>
