--- a/additionalTasks/lesson08/index.html
+++ b/additionalTasks/lesson08/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Домашні завдання (Урок 8).</h1>
+		<h1>Інші домашні завдання (Урок 8).</h1>
 		<ol>
 			<li>
 				<a target="_blank" href="./tasks/task1.html">Задача № 1. </a>
