fill links by description

--- a/additionalTasks/lesson08/index.html
+++ b/additionalTasks/lesson08/index.html
@@ -76,16 +76,22 @@
 		<h1>Інші домашні завдання (Урок 8).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1. </a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1. Дано масив, який містить оцінки з К предметів. Знайти
+					середній бал і з’ясувати до якої категорії він відноситься (відмінник, двійочник (має хоча би одну двійку),
+					хорошист (оцінки добре і відмінно), трійочник(є хоча би одна трійка)).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2. </a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2.Дано масив імен учнів. З’ясувати скільки разів
+					зустрічається ім’я «Іван». </a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3. </a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3. Дано послідовність платіжок протягом року.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4. </a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. Морський бій.Користувач вводить кількість клітинок
+					одновимірного масиву та кількість одиночних кораблів.Комп’ютер довільно розміщує ці одиночні кораблі у масиві
+					по один у клітинці(якщо у клітинці 0, то клітинка пуста, якщо 1 – то це означає, що там є корабель).Користувач
+					вводить номер клітинки, куди стріляє.Гра продовжується до тих пір, поки не будуть потоплені усі кораблі.</a>
 			</li>
 		</ol>
 	</div>
