--- a/additionalTasks/lesson09/index.html
+++ b/additionalTasks/lesson09/index.html
@@ -76,19 +76,24 @@
 		<h1>Інші домашні завдання (Урок 9).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1.</a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1. Користувач вводить кількість елементів. Створити масив,
+					що складається з вказаної кількості елементів заповнених нулями.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2.</a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2. ористувач вводить кількість елементів. Створити масив,
+					у якому перші 5 елементів заповнені 1-цями, а інші до кінця масиву заповнені 7-ками.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3.</a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3. Дано масив елементів. Вивести на екран елементи, що
+					більші за 100.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4. </a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. Дано масив елементів. Усі елементи, які більші за перший
+					елемент помножити на 2.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5. </a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5. Дано масив цін у грн. Податок складає 20%. Сформувати
+					масив, який буде містити величину сплаченого податку у грн.</a>
 			</li>
 		</ol>
 	</div>
